# ListOfPreciousCharacters

./: .gitignore  README.md  deploy.yml
.github/workflows/: deploy.yml  main.yml
pdcsw/: .gitignore  README.md  debug_dice.mjs  debug_dice_sides.mjs  next.config.ts  package-lock.json  package.json
pdcsw/src-tauri/: Cargo.toml  tauri.conf.json
pdcsw/src/app/: globals.css  layout.tsx  page.tsx
pdcsw/src/components/: changelog-modal.tsx  splash-screen.tsx
pdcsw/src/components/character/: character-sheet.tsx  credits-modal.tsx  dice-modal.tsx  image-upload.tsx  inventory-manager.tsx  memories-sheet.tsx  memories-tables-modal.tsx  notes-section.tsx  premade-character-modal.tsx  reset-modal.tsx  skills-manager.tsx  tiptap-editor.tsx
pdcsw/src/data/: memories-tables.ts
pdcsw/src/data/premade/: magical_conductor.json  marks_mage.json  martial_dancer.json  soul_infuser.json
pdcsw/src/lib/: changelog.ts  equipment-logic.ts  game-data.ts  game-data.ts_temp  schema.ts
